# gensokanji-bot

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  app.py  bot.py  config.py  data_models.py  pyproject.toml  requirements.txt  setup.cfg
.github/actions/post_tweet/: action.yml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: pull_request.yml  tweet_bot.yml
api/: __init__.py  database.py  twitter.py
app/: bot.py  botjobs.py  config.py  main.py  mydrive.py
app/api/: gdrive.py  twitter.py
app/data/: tweets.tsv
app/db/: __init__.py  botdb.py  connect.py  tdquery.py
data/: tweets.tsv  tweets.yml
db/: __init__.py
resources/tweet_content/: LICENSE
scripts/: tweet_validator.py
src/: app.py  bot.py  config.py  constants.py  data_models.py  main.py  scheduler.py  utils.py
src/api/: database.py  twitter.py
src/api_clients/: database_api.py  twitter_api.py
src/app/: __init__.py  routes.py
src/bot/: bot.py  scheduler.py  sync_tweets.py  utils.py
src/models/: tweet.py
tests/: conftest.py
tests/integration/: test_app.py  test_bot.py  test_scheduler.py
tests/unit/: test_data.py  test_scheduler_config.py  test_sync_tweets.py
