[project]
name = "gensokanji-bot"
version = "0.1.0"
requires-python = "~=3.11.9"
package-mode = false
dependencies = [
    "flask~=3.0",
    "flask-apscheduler~=1.13",
    "gunicorn~=23.0",
    "loguru~=0.7.3",
    "python-dotenv~=1.1",
    "pyyaml~=6.0",
    "supabase~=0.7", # TODO: Resolve scheduler not starting issue with supabase v1.0 and above.
    "tweepy~=4.14",
]

[dependency-groups]
dev = [
    "black~=25.1",
    "colorama~=0.4",
    "isort~=6.0",
    "mypy~=1.10",
    "pydantic~=1.10",
    "pyproject-flake8~=7.0",
    "pytest~=8.2",
    "pytest-mock~=3.14",
    "setuptools~=78.1",
    "twitter-text-parser~=3.0",
    "types-pyyaml~=6.0",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__"]
max-complexity = 10

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
