[project]
name = "gensokanji-bot"
version = "0.1.0"
requires-python = "~=3.11.9"
package-mode = false
dependencies = [
    "flask~=3.0",
    "gunicorn~=23.0",
    "loguru~=0.7.3",
    "python-dotenv~=1.1",
    "pytz==2025.2",
    "pyyaml~=6.0",
    "schedule~=1.2.2",
    "supabase~=2.15.0",
    "tweepy~=4.14",
]

[dependency-groups]
dev = [
    "colorama~=0.4",
    "mypy~=1.10",
    "pydantic~=2.11.3",
    "pydantic-settings~=2.9.1",
    "pytest~=8.2",
    "pytest-mock~=3.14",
    "ruff~=0.11",
    "setuptools~=78.1",
    "twitter-text-parser~=3.0",
    "types-colorama~=0.4",
    "types-pytz==2025.2.0.20250326",
    "types-pyyaml~=6.0",
]

[[tool.mypy.overrides]]
module = ["twitter_text", "tweepy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
