[project]
name = "gensokanji-bot"
version = "0.1.0"
requires-python = "~=3.11.9"
package-mode = false
dependencies = [
    "backoff~=2.2.1",
    "loguru~=0.7.3",
    "pydantic~=2.11.3",
    "pydantic-settings~=2.9.1",
    "python-dotenv~=1.1",
    "pyyaml~=6.0",
    "supabase~=2.15.0",
    "tweepy~=4.14",
]

[dependency-groups]
dev = [
    "colorama~=0.4",
    "mypy~=1.10",
    "pytest~=8.2",
    "pytest-mock~=3.14",
    "ruff~=0.11",
    "setuptools~=78.1",
    "twitter-text-parser~=3.0",
    "types-colorama~=0.4",
    "types-pyyaml~=6.0",
]

[[tool.mypy.overrides]]
module = ["twitter_text", "tweepy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
